fixed margin top and bottom spacing for sections

--- a/des157a/styles.css
+++ b/des157a/styles.css
@@ -273,12 +273,10 @@ h3 {
     padding-left: 20px;
 }
 
-.first:first-of-type {
-    margin-top: 10px;
-}
-
 ul {
     margin: 0px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     padding: 0px;
     padding-left: 20px;
     line-height: 2em;
